[astups] Start the astups part that will in fact use the artag library
The data files are just for testing:
tag is a tag to test the detection
LogitechPro4000.dat is a fake caliration file
markerboard_480-499.jpg is for testing purpose

The old_main.txt contains a code that show various use of the library

The main.cpp is the current implementation of the library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ endif(COMPILE_CALIB)
 add_subdirectory(src)
 add_subdirectory(tools)
 add_subdirectory(sample)
+add_subdirectory(astups)
 
 #Documentation
 find_package(Doxygen QUIET)
